projects/vb6parse/snapshots/syntax/statements/system_interaction/savepicture/savepicture_with_app_path.snap
---
source: projects/vb6parse/src/syntax/statements/system_interaction/savepicture.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: SavePictureStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: SavePictureKeyword
                  text: SavePicture
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: MemberAccessExpression
                          children:
                            - kind: Identifier
                              text: Picture1
                            - kind: PeriodOperator
                              text: "."
                            - kind: Identifier
                              text: Picture
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: Argument
                      children:
                        - kind: BinaryExpression
                          children:
                            - kind: MemberAccessExpression
                              children:
                                - kind: Identifier
                                  text: App
                                - kind: PeriodOperator
                                  text: "."
                                - kind: Identifier
                                  text: Path
                            - kind: Whitespace
                              text: " "
                            - kind: Ampersand
                              text: "&"
                            - kind: Whitespace
                              text: " "
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"\\output.bmp\""
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
